unpackaged/main/default/objects/User/fields/Coach__c.field-meta.xml
<CustomField>
    <fullName>Coach__c</fullName>
    <label>Coach</label>
    <relationshipName>Coach</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>