unpackaged/main/default/objects/User/fields/EDY_ORGCUSTOM__Old_First_Name__c.field-meta.xml
<CustomField>
    <fullName>EDY_ORGCUSTOM__Old_First_Name__c</fullName>
    <label>Old First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>