unpackaged/main/default/objects/User/fields/FSSK__FSK_FSL_Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>FSSK__FSK_FSL_Resource_Type__c</fullName>
    <description>A Field Service Starter Kit package field: 
When an admin creates or updates user records, the SFS Resource Type field on the user object allows the admin to assign permission sets to the user and determine whether a Service Resource record should be created and associated to the user as well.</description>
    <inlineHelpText>A Field Service Starter Kit package field: 
When an admin creates or updates user records, the SFS Resource Type field on the user object allows the admin to assign permission sets to the user and determine whether a Service Resource record should be created and associated to the user as well.</inlineHelpText>
    <label>SFS Resource Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resource_Mobile</fullName>
                <label>Resource (With Mobile)</label>
            </value>
            <value>
                <fullName>Resource</fullName>
                <label>Resource (Without Mobile)</label>
            </value>
            <value>
                <fullName>Dispatcher</fullName>
            </value>
            <value>
                <fullName>Resource_Dispatcher_Mobile</fullName>
                <label>Resource &amp; Dispatcher (With Mobile)</label>
            </value>
            <value>
                <fullName>Resource_Dispatcher</fullName>
                <label>Resource &amp; Dispatcher (Without Mobile)</label>
            </value>
            <value>
                <fullName>Community</fullName>
                <label>Contractor Dispatcher (Community Dispatcher)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>