unpackaged/main/default/objects/User/fields/Key_User__c.field-meta.xml
<CustomField>
    <fullName>Key_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Users who are often employed in demos.  Added to created &quot;Key Users&quot; list view.</description>
    <label>Key User</label>
    <type>Checkbox</type>
</CustomField>