unpackaged/main/default/objects/User/fields/pi__Can_View_Not_Assigned_Prospects__c.field-meta.xml
<CustomField>
    <fullName>pi__Can_View_Not_Assigned_Prospects__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can View Not Assigned Prospects</label>
    <type>Checkbox</type>
</CustomField>