unpackaged/main/default/objects/User/fields/pi__Pardot_User_Id__c.field-meta.xml
<CustomField>
    <fullName>pi__Pardot_User_Id__c</fullName>
    <label>Account Engagement User Id</label>
    <length>100</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>