unpackaged/main/default/objects/User/fields/SDO_Experience_ReputationPoints__c.field-meta.xml
<CustomField>
    <fullName>SDO_Experience_ReputationPoints__c</fullName>
    <description>WHAT: Used in NextGen processes to map to Network Member reputation points. This is only used on deployment from CCI and does not map back from network member with reputation point updates. WHO: Jory Dean WHEN: April 2023</description>
    <label>Experience Reputation Points</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>