unpackaged/main/default/objects/User/fields/xDO_Is_Q_Brix_Admin__c.field-meta.xml
<CustomField>
    <fullName>xDO_Is_Q_Brix_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Q Brix Admin User</label>
    <type>Checkbox</type>
</CustomField>