unpackaged/main/default/objects/User/validationRules/FSSK__FSK_User_Type_Is_Not_Community.validationRule-meta.xml
<ValidationRule>
    <fullName>FSSK__FSK_User_Type_Is_Not_Community</fullName>
    <active>true</active>
    <description>A Field Service Starter Kit validation rule:
The validation rule ensures that the admin can only select the Contractor Dispatcher (Community Dispatcher) value if the user record is of community type.</description>
    <errorConditionFormula>AND($Setup.FSSK__FSK_FSL_Starter_Kit__c.FSSK__Create_FSL_Resource_From_User__c,
ISBLANK(ContactId),
ISPICKVAL(FSSK__FSK_FSL_Resource_Type__c, &#39;Community&#39;))</errorConditionFormula>
    <errorDisplayField>FSSK__FSK_FSL_Resource_Type__c</errorDisplayField>
    <errorMessage>FSSK Package: This SFS Resource Type value should only be used for community user records</errorMessage>
</ValidationRule>