unpackaged/main/default/objects/User/listViews/Field_Service_Users.listView-meta.xml
<ListView>
    <fullName>Field_Service_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.PROFILE.USERTYPE</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Field_Service_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Field Service Users</label>
    <language>en_US</language>
</ListView>